--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Zinc | Discord bot</title>
     <meta name="description"
         content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
+    <meta name="image" content="img/zinc.png">
+    <meta name="title" content="Zinc | Discord Multipurpose Bot">
     <meta name="theme-color" content="#11101D">
-    <meta name="og:image" content="https://hiphop602.github.io/Zinc-Website/img/zinc.png">
     <meta name="author" content="Zinc">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
