--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Zinc | Discord bot</title>
-    <meta name="description"
+    <meta property="description"
         content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
-    <meta name="image" content="img/zinc.png">
-    <meta name="title" content="Zinc | Discord Multipurpose Bot">
-    <meta name="theme-color" content="#11101D">
-    <meta name="author" content="Zinc">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="image" content="img/zinc.png">
+    <meta property="title" content="Zinc | A Discord Multipurpose Bot">
+    <meta property="theme-color" content="#11101D">
+    <meta property="author" content="Zinc">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  <!-- Repetition of meta tag -->
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
