--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
     <meta property="theme-color" content="#11101D">
     <meta property="author" content="Zinc">
+    <meta property="og:image" content="https://hiphop602.github.io/Zinc-Website/img/zinc.png">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  <!-- Repetition of meta tag -->
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
