--- a/tos.html
+++ b/tos.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zinc | Terms Of Service</title>
+    <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
+<body style="background-color: var(--background);">
+    <nav class="navbar navbar-light navbar-expand fixed-top"
+        style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
+        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button
+                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
+            <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="nav-link active smoothScroll"
+                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                        style="color: var(--text-color);">Features</a></li>
+                <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html"
+                        style="color: var(--text-color);">Commands</a></li>
+                <li class="nav-item"><a class="nav-link"
+                        href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands"
+                        style="color: var(--text-color);">Invite</a></li>
+                <li class="nav-item"><a class="nav-link smoothScroll" href="statistics.html"
+                        style="color: var(--text-color);">Statistics</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center"
+        style="height: 418px;text-align: center;margin: 55px;"><img class="profile" src="img/zinc.png" width="150"
+            height="150" style="margin-top: 30px;">
+        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Zinc - Terms of Service</h1>
+        <p style="color: var(--secondary-text-color);">Add TOS here.</p>
+    </header>
+
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/Counting.js"></script>
+    <script src="assets/js/untitled.js"></script>
+</body>
+
+</html>
